# lucy_notes_daemon

./: .flake8  .gitignore  .gitkeep  LICENSE  README.md  config.txt  main.py  notifications.example.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  packaging.yml
lucy_notes_manager/: __main__.py  change_handler.py  file_handler.py  module_manager.py
lucy_notes_manager/lib/: __init__.py  args.py  path.py
lucy_notes_manager/modules/: abstract_module.py  banner.py  banner_inserter.py  cmd.py  git.py  plasma_sync.py  plasma_todo_sync.py  renamer.py  sys.py  sys_info.py  today.py  todo_formatter.py
lucy_notes_manager/modules/git/: __init__.py  batch.py  commands.py  config.py  conflicts.py  helpers.py  module.py  operations.py  parsing.py  paths.py  pull.py  types.py  worker.py
lucy_notes_manager/modules/plasma_sync/: __init__.py  config.py  core.py
lucy_notes_manager/notifications/: __init__.py  base.py  registry.py  rss.py  webhook.py
note_manager/: change_handler.py
note_manager/modules/: abstract_module.py  banner_inserter.py  git.py  plasma_todo_sync.py  renamer.py  todo_formatter.py
packaging/: README.md
packaging/arch/: PKGBUILD.in
packaging/common/: lucy-notes-daemon.service  version.sh
packaging/scripts/: build-arch.sh  build-deb.sh  build-rpm.sh
tests/: test_abstract_module.py  test_args.py  test_file_handler.py  test_lib_path_and_config.py  test_lib_utils.py  test_main.py  test_module_manager.py
tests/modules/: test_banner.py  test_cmd.py  test_git.py  test_plasma_sync.py  test_renamer.py  test_sys.py  test_today.py  test_todo_formatter.py
tests/notifications/: test_registry.py  test_rss.py  test_webhook.py
